fix buttons aligned to bottm with flex

--- a/rent-a-car-fe/src/assets/css/rent_a_car_custom.css
+++ b/rent-a-car-fe/src/assets/css/rent_a_car_custom.css
@@ -133,6 +133,12 @@ footer {
     padding-bottom: 30px;
 }
 
+.card-body1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+ }
+  
 
 
 
